<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center" android:id="@+id/MainLayout"
	android:keepScreenOn="true">
	<Chronometer android:id="@+id/Chrono" style="@style/ChronoStyle" />
	<TextView android:id="@+id/SubTitle" android:text="@string/stopwatch_subtitle"
		style="@style/SubTitleStyle" />
	<TextView android:id="@+id/Messages" style="@style/SubTitleStyle" />
	<LinearLayout style="@style/FullWidthVertical" android:weightSum="1">
		<Button android:text="@string/start_button" android:id="@+id/StartStopButton"
			style="@style/StartStopButtonStyle" android:layout_weight=".5"></Button>
		<Button android:text="@string/reset_button" android:id="@+id/ResetButton"
			style="@style/ResetButtonStyle" android:layout_weight=".5"></Button>
	</LinearLayout>
</LinearLayout>
